<resources>
    <string name="app_name">MilitaryCalendar</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="next">다음</string>
    <string name="back">이전</string>
    <string name="complete">완료</string>
    <string name="init">초기화</string>
    <string name="input_name">이름을 입력하세요.</string>
    <string name="input_enlist">입대 날짜를 선택해주세요.</string>
    <string name="verify">정보가 맞나요?</string>
    <string name="profile_image">프로필 사진</string>
    <string name="promotion">직급</string>
    <string name="name_text">name</string>
    <string name="dday_text">D-1</string>
    <string name="percent_text">100%</string>
    <string name="numVacationDay_text">77일</string>
    <string name="Vacation_text">남은 휴가</string>
    <string name="nextVacation">다음휴가</string>
    <string name="nextVacation_Date">7월 12일</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">위젯 설정</string>
    <string name="add_widget">Add widget</string>
    <string name="transparencyText">투명도(%) :</string>
    <string name="opacity">0</string>
    <string name="preview_text">미리보기 입니다. 클릭하면 위젯이 적용됩니다.</string>
    <string name="large_percent_text">복무율</string>
    <string name="large_until_text">전역까지</string>
    <string name="largeNextShift">다음 당직</string>
    <string name="largeNextShiftDate">7월 4일</string>
    <string name="largeDDayShift">D-4</string>
    <string name="largeMemo">메모</string>
    <string name="largeShiftMemoContent">최후임 일병한테 통당서는 법 인수인계</string>
    <string name="largeNextDrill">다음 훈련</string>
    <string name="largeNextDrillDate">7월 29일</string>
    <string name="largeDDayDrill">D-29</string>
    <string name="largeDrillMemoContent">유격훈련\n군장쌀때 전투화\n잊지말기</string>
    <string name="largeEnd">[전역]</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string-array name="affiliations_string">
        <item>육군</item>
        <item>해군</item>
        <item>공군</item>
        <item>해병대</item>
        <item>의경</item>
        <item>해양의무경찰</item>
        <item>사회복무요원</item>
        <item>의무소방대</item>
    </string-array>
    <string name="army">육군</string>
    <string name="navy">해군</string>
    <string name="airforce">공군</string>
    <string name="marine">해병대</string>
    <string name="police">의경</string>
    <string name="seapolice">해양의무경찰</string>
    <string name="agent">사회복무요원</string>
    <string name="fire">의무소방대</string>
    <string-array name="addLeave_string">
        <item>휴가</item>
        <item>외박</item>
        <item>외출</item>
    </string-array>
    <string name="leaveSelect">휴가</string>
    <string name="passSelect">외박</string>
    <string name="offPostSelect">외출</string>
    <string name="profileHeader">출사표</string>
    <string name="profileHeaderEdit">출사표 수정</string>
    <string name="profileNameHint">이름/별명</string>
    <string name="profilePromotion">군별</string>
    <string name="profileEnlistDate">입대일</string>
    <string name="profileEnlistDateHint">입대일을 입력하세요</string>
    <string name="promotionTextMain">진급일 조정</string>
    <string name="promotionTextHint">진급일</string>
    <string name="promotionTextFirst">일병 진급일</string>
    <string name="promotionTextSecond">상병 진급일</string>
    <string name="promotionTextThird">병장 진급일</string>
    <string name="profileEndDate">전역일</string>
    <string name="profileEndDateHint">전역일을 입력하세요</string>
    <string name="profileLeaveDayText">휴가일 조정</string>
    <string name="profileLeaveDay">남은 휴가일을 입력하세요</string>
    <string name="noAdminEffect">위 계산 결과는 행정효력이 없습니다</string>
    <string name="reset">초기화</string>
    <string name="register">등록하기</string>
    <string name="clockUnitlEnd">전역까지 D-83</string>
    <string name="clockPromotion">이병</string>
    <string name="clockHobong">1호봉</string>
    <string name="clockName">경에이</string>
    <string name="clockCurrentTimeMessage">국방부 시계는 지금</string>
    <string name="clockCurrentTime">20:42:15</string>
    <string name="clockTotalProgressText">총 복무율</string>
    <string name="clockTotalProgress">97.423%</string>
    <string name="clockCurrentRankText">현재 계급</string>
    <string name="clockCurrentHobongText">현재 호봉</string>
    <string-array name="bank_string">
        <item>수협은행</item>
        <item>신한은행</item>
        <item>우리은행</item>
        <item>하나은행</item>
        <item>국민은행</item>
        <item>농협은행</item>
        <item>기업은행</item>
        <item>대구은행</item>
        <item>부산은행</item>
        <item>경남은행</item>
        <item>광주은행</item>
        <item>전북은행</item>
        <item>제주은행</item>
        <item>우체국은행</item>
    </string-array>
    <string name="bankSuhyeobText">수협은행</string>
    <string name="bankShinhanText">신한은행</string>
    <string name="bankWooriText">우리은행</string>
    <string name="bankHanaText">하나은행</string>
    <string name="bankKookminText">국민은행</string>
    <string name="bankNonghyeobText">농협은행</string>
    <string name="bankIndustrialText">기업은행</string>
    <string name="bankDaeguText">대구은행</string>
    <string name="bankBusanText">부산은행</string>
    <string name="bankGyeongnamText">경남은행</string>
    <string name="bankGwangjuText">광주은행</string>
    <string name="bankJeonbookText">전북은행</string>
    <string name="bankJejuText">제주은행</string>
    <string name="bankPostOfficeText">우체국은행</string>
    <string name="bankMyDepositText">내 적금</string>
    <string name="bankTotalDeposit">총 3,200,000원</string>
    <string name="bankTotalMonthlyDeposit">월 300,000원</string>
    <string name="bankByBankDeposit">1,000,000원</string>
    <string name="bankMonthDeposit">월 150,000원</string>
    <string name="bankStatusHeaderText">이번 달 나의 적금 점수</string>
    <string name="bankStatusScore">A</string>
    <string name="bankStatusScoreText">훌륭해요!</string>
    <string name="bankStatusMonthlyRatio">월급의 73.94%를 저금 중입니다!</string>
    <string name="bankStatusMontlyRatioDescription">(병장 월급 405,700원 중 적금 300,000원)</string>
    <string name="bankPopupWarning">입력하신 은행의 정보가 이미 있습니다.\n지금 입력하신 정보로 수정하시겠습니까?</string>
    <string name="bankRecyclerEdit">수정</string>
    <string name="bankRecyclerDelete">삭제</string>
    <string name="enroll">새 적금 등록하기</string>
    <string name="bankName">은행명</string>
    <string name="bankNameHint">은행을 선택해주세요</string>
    <string name="startDate">시작일</string>
    <string name="startDateHint">시작일을 선택해주세요</string>
    <string name="endDate">만기일</string>
    <string name="endDateHint">만기일을 선택해주세요</string>
    <string name="depositAmount">입금 금액</string>
    <string name="depositAmountHint">1회 입금 금액을 입력해주세요</string>
    <string name="depositAmountPopup">1회 입금 금액(원)</string>
    <string name="depositAmountPopupCancel">취소</string>
    <string name="depositAmountPopupSave">입력</string>
    <string name="interest">만기 이율</string>
    <string name="interestPercent">만기 이율 (%)</string>
    <string name="interestHint">만기시 이율을 입력해주세요</string>
    <string name="interestHelp">만기 이율은 적금 통장의 첫번째 장에서 찾을 수 있습니다.\n신한은행 군적금의 기본 금리는 6개월 이상 12개월 미만 기준 4%입니다.\n신한은행 군적금의
        우대 금리는 최대 0.7%p입니다.
    </string>
    <string name="bankCancel">등록 취소</string>
    <string name="bankInit">초기화</string>
    <string name="bankRegister">등록 완료</string>
    <string name="duration">기간</string>
    <string name="baseRate">기본금리</string>
    <string name="additionalRate">우대금리</string>
    <string name="sixMonths">6개월 이상</string>
    <string name="twelveMonths">12개월 이상</string>
    <string name="eighteenMonths">18개월 이상,\n24개월 이하</string>
    <string name="additionalType">우대금리항목</string>
    <string name="standard">기준</string>
    <string name="shinhanTitle">신한: 신한 장병내일준비 적금</string>
    <string-array name="infoArray01">
        <item>수협: Sh장병내일준비적금</item>
        <item>3%</item>
        <item>4%</item>
        <item>5%</item>
        <item>최대 0.3%p</item>
        <item>마케팅 동의</item>
        <item>연 0.1%p</item>
        <item>마케팅 활용 동의한 경우</item>
        <item>예적금 등 거래고객</item>
        <item>연 0.2%p</item>
        <item>당행 정기예금, 적금, 펀드, 공제, 신탁 중 1종 이상 보유 고객</item>
        <item>친구추천우대</item>
        <item>연 0.1%p</item>
        <item>신규일부터 만기전일까지 \'당행 스마트폰뱅킹의 상품 알리기\'를 통해 당 적금 추천 시</item>
        <item>자동입금이체 실적</item>
        <item>연 0.1%p</item>
        <item>신규월부터 만기전월까지의 기간동안 적금 계약기간의 1/2에 해당하는 월수만큼 매월 당행 입출금통장에 자동입금이체실적이 있는 경우</item>
        <item>카드거래실적</item>
        <item>최대 연 0.2%p</item>
        <item>신규일부터 만기전일까지 수협신용(체크)카드 연평균 결제실적 30만원당 연 0.1%p 제공</item>
    </string-array>
    <string-array name="infoArray02">
        <item>신한: 신한 장병내일준비 적금</item>
        <item>4.0%</item>
        <item>4.5%</item>
        <item>5.0%</item>
        <item>최대 0.7%p</item>
        <item>주택청약</item>
        <item>연 0.3%p</item>
        <item>신한은행 주택종합청약 저축을 만기전일까지 유지한 경우</item>
        <item>신한카드</item>
        <item>연 0.2%p</item>
        <item>당행 계좌를 통해 신한카드(신용/체크)결제 실적이 있는 경우</item>
        <item>자동이체</item>
        <item>연 0.2%p</item>
        <item>당행 통장을 통해 자동이체 실적이 5개월 이상 있는 경우</item>
    </string-array>
    <string-array name="infoArray03">
        <item>우리: 우리은행 장병내일준비적금</item>
        <item>3.5%</item>
        <item>4.0%</item>
        <item>5.0%</item>
        <item>최대 0.5%p</item>
        <item>주택청약</item>
        <item>연 0.1%p</item>
        <item>이 적금의 신규 시점에 우리은행에서 가입한 주택청약종합저축 상품을 보유하고 있는 경우</item>
        <item>우리카드</item>
        <item>연 0.1%p</item>
        <item>실적인정기간 동안 우리카드(체크/신용) 결제계좌를 우리은행 입출식 계좌로 지정한 후, 매월 카드 결제실적 보유</item>
        <item>자동이체</item>
        <item>연 0.3%p</item>
        <item>우리은행 입출식 계좌에서 매월 자동이체를 통해 실적인정기간의 ½ 기간 이상 이 적금으로 적립한 경우</item>
    </string-array>
    <string-array name="infoArray04">
        <item>하나: KEB하나 장병내일준비 적금</item>
        <item>3.5%</item>
        <item>4.0%</item>
        <item>5.0%</item>
        <item>최대 0.5%p</item>
        <item>주택청약</item>
        <item>연 0.3%p</item>
        <item>이 적금의 신규 시점에 KEB하나은행에서 가입한 주택청약종합저축 상품을 보유하고 있는 경우</item>
        <item>하나카드 군 급여 입금</item>
        <item>연 0.2%p</item>
        <item>이 예금 가입후 만기 전전월의 말일까지 본인명의 KEB하나은행 입출금통장을 통해 3회이상 군급여 입금실적을 보유하거나, 하나카드사의 카드(신용/체크)결제 실적이 3회 이상 있을 경우 연
            0.2%우대\n※ 군급여이체 및 카드결제 실적은 월 1회만 인정하며, 군급여이체 실적은 국군재정관리단을 통한 이체에 한정
        </item>
    </string-array>
    <string-array name="infoArray05">
        <item>국민: KB장병내일준비적금</item>
        <item>3.5%</item>
        <item>4.0%</item>
        <item>5.0%</item>
        <item>최대 0.5%p</item>
        <item>주택청약</item>
        <item>연 0.2%p</item>
        <item>적금 만기일 기준 전전월 말일을 기준으로, 고객이 KB국민은행 주택청약종합 저축(청년 우대형 주택청약종합저축 포함) 계좌를 보유한 경우</item>
        <item>군 급여 입금</item>
        <item>연 0.3%p</item>
        <item>적금 신규월 초일부터 만기일 기준 전전월 말일까지 고객이 가입한 적금 계약기간(월 환산)의 2/3에 해당하는 기간 동안 고객의 KB국민은행 입출금통장으로 급여이체 실적이 매월 10만원 이상인
            경우
        </item>
    </string-array>
    <string-array name="infoArray06">
        <item>농협: NH장병내일준비적금</item>
        <item>3.0%</item>
        <item>4.0%</item>
        <item>5.0%</item>
        <item>최대 0.5%p</item>
        <item>카드이용</item>
        <item>연 0.2%p</item>
        <item>(적금 가입월~만기 전전월말)은행에서 발급한 NH농협 개인신용·체크카드(채움) 월평균 10만원이상 이용실적이 있는 경우</item>
        <item>수신입금</item>
        <item>연 0.3%p</item>
        <item>(적금 가입월~만기 전전월말)농협은행 주택청약종합저축 (청년우대형 포함)가입 및 5회이상 납입하고 보유 시</item>
    </string-array>
</resources>