<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configure"
            android:layout_marginBottom="8dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="8dp" android:gravity="center_vertical">
        <TextView
                android:text="@string/transparencyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/largeTextView"/>
        <TextView
                android:id="@+id/largeOpacityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_padding_between"
                android:hint="@string/opacity"/>
    </LinearLayout>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/largeSeekBar"
            android:max="100" android:layout_marginTop="8dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="240dp" android:gravity="center" android:id="@+id/largeTransparentLayout"
            android:background="@drawable/cloud" android:layout_marginTop="8dp">
        <Button
                android:id="@+id/largeButtonTemp"
                android:background="@drawable/widget_background"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/preview_text"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    </LinearLayout>

</LinearLayout>